Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17646

Qt Quick Designer asserts when using the "cut" action on the root element.

XMLWordPrintable

      When selecting the root element, the "cut" toolbutton in the toolbar (also the delete icon) is enabled. When pressing that, Qt Quick Designer asserts.

      Should the icons be disabled for the root item?

      012fa394 108cfb14 QmlDesignerd4!QmlDesigner::Internal::ModelValidator::propertyAbsentFromQml(class QmlDesigner::AbstractProperty * modelProperty = 0x012fa470)+0x2d [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\texttomodelmerger.cpp @ 1694]
      012fa83c 108cdf76 QmlDesignerd4!QmlDesigner::Internal::TextToModelMerger::syncNode(class QmlDesigner::ModelNode * modelNode = 0x012fa974, class QmlJS::AST::UiObjectMember * astNode = 0x2cc7c640*** WARNING: Unable to verify checksum for C:\Users\alportal\dev\qt-creator\bin\QmlJSd4.dll
      , class QmlDesigner::Internal::ReadingContext * context = 0x012fa8f0, class QmlDesigner::Internal::DifferenceHandler * differenceHandler = 0x012fab5c)+0x18c4 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\texttomodelmerger.cpp @ 1190]
      012fab48 10863f7b QmlDesignerd4!QmlDesigner::Internal::TextToModelMerger::load(class QString * data = 0x012fab6c, class QmlDesigner::Internal::DifferenceHandler * differenceHandler = 0x012fab5c)+0x8b6 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\texttomodelmerger.cpp @ 977]
      012fab80 10a1a6fe QmlDesignerd4!QmlDesigner::RewriterView::qmlTextChanged(void)+0xdb [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\rewriterview.cpp @ 760]
      012fab90 6710f077 QmlDesignerd4!QmlDesigner::RewriterView::qt_static_metacall(class QObject * _o = 0x27ce1088, QMetaObject::Call _c = InvokeMetaMethod (0n0), int _id = 0n0, void ** _a = 0x012fac44)+0x2e [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\debug\moc_rewriterview.cpp @ 75]
      012fac70 6710eab1 Qt5Cored!QMetaObject::activate(class QObject * sender = 0x012fb3c8, int signalOffset = 0n3, int local_signal_index = 0n0, void ** argv = 0x00000000)+0x5b7 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3762]
      012fac88 10a1b67a Qt5Cored!QMetaObject::activate(class QObject * sender = 0x012fb3c8, struct QMetaObject * m = 0x10c11854, int local_signal_index = 0n0, void ** argv = 0x00000000)+0x21 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3624]
      012faca4 108e0f98 QmlDesignerd4!QmlDesigner::TextModifier::textChanged(void)+0x1a [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\debug\moc_textmodifier.cpp @ 155]
      012facb0 108c723f QmlDesignerd4!QmlDesigner::PlainTextEditModifier::reactivateChangeSignals(void)+0x28 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\plaintexteditmodifier.cpp @ 189]
      012faf08 1086457d QmlDesignerd4!QmlDesigner::Internal::ModelToTextMerger::applyChanges(void)+0x9bf [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\modeltotextmerger.cpp @ 294]
      012fb104 10864377 QmlDesignerd4!QmlDesigner::RewriterView::applyChanges(void)+0x1fd [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\rewriterview.cpp @ 398]
      012fb114 10862459 QmlDesignerd4!QmlDesigner::RewriterView::applyModificationGroupChanges(void)+0x47 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\rewriterview.cpp @ 378]
      012fb124 108968e9 QmlDesignerd4!QmlDesigner::RewriterView::rewriterEndTransaction(void)+0x69 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\rewriterview.cpp @ 326]
      012fb190 1085cda3 QmlDesignerd4!QmlDesigner::Internal::ModelPrivate::notifyRewriterEndTransaction(void)+0x79 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\model.cpp @ 673]
      012fb19c 108fccb2 QmlDesignerd4!QmlDesigner::AbstractView::emitRewriterEndTransaction(void)+0x23 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\abstractview.cpp @ 667]
      012fb238 1090be9b QmlDesignerd4!QmlDesigner::RewriterTransaction::commit(void)+0x102 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\rewritertransaction.cpp @ 107]
      012fb358 1094b4bd QmlDesignerd4!QmlDesigner::ModelMerger::replaceModel(class QmlDesigner::ModelNode * modelNode = 0x012fb368)+0x35b [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\designercore\model\modelmerger.cpp @ 193]
      012fb534 1094ac55 QmlDesignerd4!QmlDesigner::DesignDocumentView::toText(void)+0x5ed [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\components\integration\designdocumentview.cpp @ 112]
      012fb5bc 10945ebe QmlDesignerd4!QmlDesigner::DesignDocumentView::toClipboard(void)+0x85 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\components\integration\designdocumentview.cpp @ 67]
      012fb7c4 1094623f QmlDesignerd4!QmlDesigner::DesignDocument::copySelected(void)+0x50e [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\components\integration\designdocument.cpp @ 421]
      012fb7d0 107e30c2 QmlDesignerd4!QmlDesigner::DesignDocument::cutSelected(void)+0xf [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\components\integration\designdocument.cpp @ 443]
      012fb7dc 107e484a QmlDesignerd4!QmlDesigner::ShortCutManager::cutSelected(void)+0x22 [c:\users\alportal\dev\qt-creator\src\plugins\qmldesigner\shortcutmanager.cpp @ 324]
      012fb7e8 107e3504 QmlDesignerd4!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (<function> * f = 0x107e30a0, class QmlDesigner::ShortCutManager * o = 0x1641b958, void ** arg = 0x012fb94c)+0xa [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 143]
      012fb7fc 107e4cbe QmlDesignerd4!QtPrivate::FunctionPointer<void (<function> * f = 0x107e30a0, class QmlDesigner::ShortCutManager * o = 0x1641b958, void ** arg = 0x012fb94c)+0x14 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 162]
      012fb824 6711c43f QmlDesignerd4!QtPrivate::QSlotObject<void (int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x165a22a8, class QObject * r = 0x1641b958, void ** a = 0x012fb94c, bool * ret = 0x00000000)+0x5e [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 120]
      012fb844 6710ef9c Qt5Cored!QtPrivate::QSlotObjectBase::call(class QObject * r = 0x1641b958, void ** a = 0x012fb94c)+0x1f [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 101]
      012fb91c 6710eab1 Qt5Cored!QMetaObject::activate(class QObject * sender = 0x1641b9bc*** WARNING: Unable to verify checksum for C:\Users\alportal\dev\qt-creator\bin\Utilsd4.dll
      , int signalOffset = 0n3, int local_signal_index = 0n1, void ** argv = 0x012fb94c)+0x4dc [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3750]
      *** WARNING: Unable to verify checksum for C:\Users\alportal\dev\qt5\qtbase\lib\Qt5Widgetsd.dll
      012fb934 6455905b Qt5Cored!QMetaObject::activate(class QObject * sender = 0x1641b9bc, struct QMetaObject * m = 0x64d02c70, int local_signal_index = 0n1, void ** argv = 0x012fb94c)+0x21 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3624]
      012fb958 019b69ac Qt5Widgetsd!QAction::triggered(bool _t1 = false)+0x2b [c:\users\alportal\dev\qt5\qtbase\src\widgets\.moc\debug\moc_qaction.cpp @ 371]
      012fb968 019b6294 Utilsd4!QtPrivate::FunctorCall<QtPrivate::IndexesList<0>,QtPrivate::List<bool>,void,void (<function> * f = 0x64534448, class QAction * o = 0x1641b9bc, void ** arg = 0x012fbacc)+0x1c [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 143]
      012fb97c 019b6b4e Utilsd4!QtPrivate::FunctionPointer<void (<function> * f = 0x64534448, class QAction * o = 0x1641b9bc, void ** arg = 0x012fbacc)+0x14 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 162]
      012fb9a4 6711c43f Utilsd4!QtPrivate::QSlotObject<void (int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x142cee18, class QObject * r = 0x1641b9bc, void ** a = 0x012fbacc, bool * ret = 0x00000000)+0x5e [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 120]
      012fb9c4 6710ef9c Qt5Cored!QtPrivate::QSlotObjectBase::call(class QObject * r = 0x1641b9bc, void ** a = 0x012fbacc)+0x1f [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 101]
      012fba9c 6710eab1 Qt5Cored!QMetaObject::activate(class QObject * sender = 0x103dca78*** WARNING: Unable to verify checksum for C:\Users\alportal\dev\qt-creator\lib\qtcreator\plugins\Cored4.dll
      , int signalOffset = 0n3, int local_signal_index = 0n1, void ** argv = 0x012fbacc)+0x4dc [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3750]
      012fbab4 6455905b Qt5Cored!QMetaObject::activate(class QObject * sender = 0x103dca78, struct QMetaObject * m = 0x64d02c70, int local_signal_index = 0n1, void ** argv = 0x012fbacc)+0x21 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3624]
      012fbad8 019b69ac Qt5Widgetsd!QAction::triggered(bool _t1 = false)+0x2b [c:\users\alportal\dev\qt5\qtbase\src\widgets\.moc\debug\moc_qaction.cpp @ 371]
      012fbae8 019b6294 Utilsd4!QtPrivate::FunctorCall<QtPrivate::IndexesList<0>,QtPrivate::List<bool>,void,void (<function> * f = 0x64534448, class QAction * o = 0x103dca78, void ** arg = 0x012fbc4c)+0x1c [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 143]
      012fbafc 019b6b4e Utilsd4!QtPrivate::FunctionPointer<void (<function> * f = 0x64534448, class QAction * o = 0x103dca78, void ** arg = 0x012fbc4c)+0x14 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 162]
      012fbb24 6711c43f Utilsd4!QtPrivate::QSlotObject<void (int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x165b3378, class QObject * r = 0x103dca78, void ** a = 0x012fbc4c, bool * ret = 0x00000000)+0x5e [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 120]
      012fbb44 6710ef9c Qt5Cored!QtPrivate::QSlotObjectBase::call(class QObject * r = 0x103dca78, void ** a = 0x012fbc4c)+0x1f [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject_impl.h @ 101]
      012fbc1c 6710eab1 Qt5Cored!QMetaObject::activate(class QObject * sender = 0x165b53e8, int signalOffset = 0n3, int local_signal_index = 0n1, void ** argv = 0x012fbc4c)+0x4dc [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3750]
      012fbc34 6455905b Qt5Cored!QMetaObject::activate(class QObject * sender = 0x165b53e8, struct QMetaObject * m = 0x64d02c70, int local_signal_index = 0n1, void ** argv = 0x012fbc4c)+0x21 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qobject.cpp @ 3624]
      012fbc58 645587d1 Qt5Widgetsd!QAction::triggered(bool _t1 = false)+0x2b [c:\users\alportal\dev\qt5\qtbase\src\widgets\.moc\debug\moc_qaction.cpp @ 371]
      012fbc78 64571511 Qt5Widgetsd!QAction::activate(QAction::ActionEvent event = Trigger (0n0))+0x101 [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qaction.cpp @ 1160]
      012fbc88 647f5678 Qt5Widgetsd!QAction::trigger(void)+0x11 [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qaction.h @ 184]
      012fbc98 646e1322 Qt5Widgetsd!QToolButton::nextCheckState(void)+0x38 [c:\users\alportal\dev\qt5\qtbase\src\widgets\widgets\qtoolbutton.cpp @ 967]
      012fbcb8 646e0bb2 Qt5Widgetsd!QAbstractButtonPrivate::click(void)+0xc2 [c:\users\alportal\dev\qt5\qtbase\src\widgets\widgets\qabstractbutton.cpp @ 394]
      012fbcd0 647f52c0 Qt5Widgetsd!QAbstractButton::mouseReleaseEvent(class QMouseEvent * e = 0x012fc720*** WARNING: Unable to verify checksum for C:\Users\alportal\dev\qt5\qtbase\lib\Qt5Guid.dll
      )+0xa2 [c:\users\alportal\dev\qt5\qtbase\src\widgets\widgets\qabstractbutton.cpp @ 1010]
      012fbce4 645c8a6d Qt5Widgetsd!QToolButton::mouseReleaseEvent(class QMouseEvent * e = 0x012fc720)+0x20 [c:\users\alportal\dev\qt5\qtbase\src\widgets\widgets\qtoolbutton.cpp @ 617]
      012fbe88 646e0721 Qt5Widgetsd!QWidget::event(class QEvent * event = 0x012fc720)+0xcd [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qwidget.cpp @ 8776]
      012fbea4 647f517b Qt5Widgetsd!QAbstractButton::event(class QEvent * e = 0x012fc720)+0xf1 [c:\users\alportal\dev\qt5\qtbase\src\widgets\widgets\qabstractbutton.cpp @ 967]
      012fbec4 6457a66b Qt5Widgetsd!QToolButton::event(class QEvent * event = 0x012fc720)+0x5b [c:\users\alportal\dev\qt5\qtbase\src\widgets\widgets\qtoolbutton.cpp @ 983]
      012fbee4 64576e87 Qt5Widgetsd!QApplicationPrivate::notify_helper(class QObject * receiver = 0x1c57fc18, class QEvent * e = 0x012fc720)+0x12b [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3728]
      012fc5a0 670c7f3c Qt5Widgetsd!QApplication::notify(class QObject * receiver = 0x1c57fc18, class QEvent * e = 0x012fc720)+0x9e7 [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3204]
      012fc5e0 671f00d8 Qt5Cored!QCoreApplication::notifyInternal2(class QObject * receiver = 0x1c57fc18, class QEvent * event = 0x012fc720)+0xec [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1026]
      012fc5f0 6457c323 Qt5Cored!QCoreApplication::sendSpontaneousEvent(class QObject * receiver = 0x1c57fc18, class QEvent * event = 0x012fc720)+0x28 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.h @ 234]
      012fc69c 64600826 Qt5Widgetsd!QApplicationPrivate::sendMouseEvent(class QWidget * receiver = 0x1c57fc18, class QMouseEvent * event = 0x012fc720, class QWidget * alienWidget = 0x1c57fc18, class QWidget * nativeWidget = 0x102dd900, class QWidget ** buttonDown = 0x64d02f0c, class QPointer<QWidget> * lastMouseReceiver = 0x64d02f18, bool spontaneous = true)+0x313 [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 2698]
      012fc9c8 645ff75f Qt5Widgetsd!QWidgetWindow::handleMouseEvent(class QMouseEvent * event = 0x012fd31c)+0xa06 [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qwidgetwindow.cpp @ 616]
      012fca0c 6457a66b Qt5Widgetsd!QWidgetWindow::event(class QEvent * event = 0x012fd31c)+0x19f [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qwidgetwindow.cpp @ 240]
      012fca2c 6457683d Qt5Widgetsd!QApplicationPrivate::notify_helper(class QObject * receiver = 0x1b01db10, class QEvent * e = 0x012fd31c)+0x12b [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3728]
      012fd0e8 670c7f3c Qt5Widgetsd!QApplication::notify(class QObject * receiver = 0x1b01db10, class QEvent * e = 0x012fd31c)+0x39d [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 3090]
      012fd128 671f00d8 Qt5Cored!QCoreApplication::notifyInternal2(class QObject * receiver = 0x1b01db10, class QEvent * event = 0x012fd31c)+0xec [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1026]
      012fd138 01bacc10 Qt5Cored!QCoreApplication::sendSpontaneousEvent(class QObject * receiver = 0x1b01db10, class QEvent * event = 0x012fd31c)+0x28 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.h @ 234]
      012fd4bc 01baed49 Qt5Guid!QGuiApplicationPrivate::processMouseEvent(class QWindowSystemInterfacePrivate::MouseEvent * e = 0x2323a988)+0x6a0 [c:\users\alportal\dev\qt5\qtbase\src\gui\kernel\qguiapplication.cpp @ 1928]
      012fd4f4 01b7c259 Qt5Guid!QGuiApplicationPrivate::processWindowSystemEvent(class QWindowSystemInterfacePrivate::WindowSystemEvent * e = 0x2323a988)+0x79 [c:\users\alportal\dev\qt5\qtbase\src\gui\kernel\qguiapplication.cpp @ 1712]
      *** WARNING: Unable to verify checksum for C:\Users\alportal\dev\qt5\qtbase\plugins\platforms\qwindowsd.dll
      012fd520 04868c8d Qt5Guid!QWindowSystemInterface::sendWindowSystemEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x99 [c:\users\alportal\dev\qt5\qtbase\src\gui\kernel\qwindowsysteminterface.cpp @ 929]
      012fd530 67160656 qwindowsd!QWindowsGuiEventDispatcher::sendPostedEvents(void)+0x1d [c:\users\alportal\dev\qt5\qtbase\src\platformsupport\eventdispatchers\qwindowsguieventdispatcher.cpp @ 82]
      012fd5e4 7506d2b3 Qt5Cored!qt_internal_proc(struct HWND__ * hwnd = 0x011808ca 0+0+129x36 'QEventDispatcherWin32_Internal_Widget1725679307', unsigned int message = 0x401, unsigned int wp = 0, long lp = 0n0)+0x3e6 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 224]
      WARNING: Stack unwind information not available. Following frames may be wrong.
      012fd610 7504e88a USER32!SetManipulationInputTarget+0x53
      012fd6f8 7504e1e4 USER32!DispatchMessageW+0x8fa
      012fd76c 7504dfa0 USER32!DispatchMessageW+0x254
      012fd778 67160fd6 USER32!DispatchMessageW+0x10
      012ff588 04868c58 Qt5Cored!QEventDispatcherWin32::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x646 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 614]
      012ff5a0 670c385c qwindowsd!QWindowsGuiEventDispatcher::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x28 [c:\users\alportal\dev\qt5\qtbase\src\platformsupport\eventdispatchers\qwindowsguieventdispatcher.cpp @ 74]
      012ff5b8 670c3a67 Qt5Cored!QEventLoop::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x4c [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventloop.cpp @ 135]
      012ff61c 670c62b2 Qt5Cored!QEventLoop::exec(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x157 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qeventloop.cpp @ 212]
      012ff678 01baab68 Qt5Cored!QCoreApplication::exec(void)+0x132 [c:\users\alportal\dev\qt5\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1299]
      012ff680 64576499 Qt5Guid!QGuiApplication::exec(void)+0x18 [c:\users\alportal\dev\qt5\qtbase\src\gui\kernel\qguiapplication.cpp @ 1659]
      *** WARNING: Unable to verify checksum for qtcreator.exe
      012ff688 00848b9e Qt5Widgetsd!QApplication::exec(void)+0x9 [c:\users\alportal\dev\qt5\qtbase\src\widgets\kernel\qapplication.cpp @ 2907]
      012ffc38 0084fa6d qtcreator!main(int argc = 0n1, char ** argv = 0x01353138)+0x2a6e [c:\users\alportal\dev\qt-creator\src\app\main.cpp @ 517]
      012ffc6c 0084e1de qtcreator!WinMain(struct HINSTANCE__ * __formal = 0x00840000, struct HINSTANCE__ * __formal = 0x00000000, char * __formal = 0x01347ffa "", int __formal = 0n10)+0xad [c:\users\alportal\dev\qt5\qtbase\src\winmain\qtmain_win.cpp @ 111]
      012ffc84 0084e0c0 qtcreator!invoke_main(void)+0x1e [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 99]
      012ffcdc 0084df6d qtcreator!__scrt_common_main_seh(void)+0x150 [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 253]
      012ffce4 0084e1e8 qtcreator!__scrt_common_main(void)+0xd [f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl @ 296]
      012ffcec 774062c4 qtcreator!WinMainCRTStartup(void)+0x8 [f:\dd\vctools\crt\vcstartup\src\startup\exe_winmain.cpp @ 17]
      012ffd00 77df0fd9 KERNEL32!BaseThreadInitThunk+0x24
      012ffd48 77df0fa4 ntdll!RtlSubscribeWnfStateChangeNotification+0x439
      012ffd58 00000000 ntdll!RtlSubscribeWnfStateChangeNotification+0x404
      

        For Gerrit Dashboard: QTCREATORBUG-17646
        # Subject Branch Project Status CR V

            thohartm Thomas Hartmann
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes