QmlDesigner: Crash fix

Deleting or cutting the root node is not possible.

Task-number: QTCREATORBUG-17646
Change-Id: I613179c291e744c2d2f6e44ce103bcbd2afaed28
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>